[package]
name = "fri"
version = "0.1.0"
authors = ["Hadas Zeilberger <hadas.zeilberger@sri.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
microbench = "0.5.0"
num-traits = { version = "0.2", default-features = false }
rand_xorshift = { version = "0.2" }
rand = "0.8.4"
derivative={version="2",features=["use_core"]}
rust-blake2 = {git="https://github.com/ebfe/rust-blake2", version = "0.0.0"}
crossbeam = "0.8"
crossbeam-channel = "0.5"
num_cpus = "1.13.0"

#arkworks dependencies
ark-ff = {git = "https://github.com/SRI-CSL/algebra", branch = "v3_sri", default-features=false, features=["asm","parallel"] }
ark-poly ={git = "https://github.com/SRI-CSL/algebra", branch = "v3_sri", default-features=false } 
ark-test-curves = {git = "https://github.com/SRI-CSL/algebra", branch = "v3_sri", default-features=false, features=["bls12_381_curve","mnt4_753_curve"] }

ark-std = {version = "0.2.1-alpha.0", git = "https://github.com/SRI-CSL/utils", default-features = false}

ark-serialize = {git = "https://github.com/SRI-CSL/algebra", branch = "v3_sri",  default-features=false } 

ark-crypto-primitives = {git="https://github.com/SRI-CSL/crypto-primitives", default-features=false, branch="new"}
ark-ed-on-bls12-381 = { git = "https://github.com/SRI-CSL/curves", default-features = false, features = [ "r1cs" ], branch = "v3_sri" }
