(include_subdirs unqualified)

;(include_dirs ~/.opam/default/lib/wiztoolkit)

(library
 (name ZKGenLib)
 (modules LPZKProver LPZKVerifier MITHBGWProver MITHBGWVerifier Wiztoolkit_load Utils)
 (libraries evocrypt wiztoolkit timer domainslib yojson str tracing)
 ;(link_flags -linkall)
 ;(include ~/.opam/default/lib/wiztoolkit)
 ;(include libbindings.a)
 (flags
  (:standard -warn-error -A))
 )

;  (env (dev
;         (flags (:standard -warn-error -A))
;         (env-vars (wiztoolkit_ocaml_build_prefix src_main))
;         )
; )