[package]
name = "vlpa19"
version = "0.1.0"
authors = ["Hadas Zeilberger <hadas.zeilberger@sri.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
ark-bls12-381 = { git = "https://github.com/SRI-CSL/curves", default-features = false, features = [ "curve" ], version="0.1.0" }
blake2 = { version = "0.9.1", default-features = false }
microbench = "0.5.0"
ark-relations = { git = "https://github.com/SRI-CSL/snark", default-features = false, version = "0.1.0" }
ark-ff = {git = "https://github.com/SRI-CSL/algebra", default-features=false, version = "0.1.0",features=["asm","parallel"]}
ark-poly ={git = "https://github.com/SRI-CSL/algebra", default-features=false, version = "0.1.0"} 
ark-test-curves = {git = "https://github.com/SRI-CSL/algebra", default-features=false, features = ["bls12_381_curve","mnt4_753_curve"], version = "0.1.0"}
num-traits = { version = "0.2", default-features = false }
ark-std = { version="0.2.1-alpha.0" , git = "https://github.com/SRI-CSL/utils", default-features = false, branch = "feb_freeze_orig"}
ark-poly-commit = { git = "https://github.com/SRI-CSL/poly-commit", default-features = false, version = "0.1.0" }
ark-crypto-primitives = {git="https://github.com/SRI-CSL/crypto-primitives", default-features=false, branch="main"}
ark-serialize = { git = "https://github.com/SRI-CSL/algebra", default-features = false, features = [ "derive" ], version = "0.1.0" }
rand_core = { version = "0.5", default-features=false}
derivative = { version = "2", features = [ "use_core" ] }
fri = {path="../fri" , default-features=false}
ark-marlin = { git = "https://github.com/SRI-CSL/marlin", default-features = false, version = "0.1.0" }
#ark-marlin = { path = "../../marlin", default-features = false, version = "0.1.0" }

