[package]
name = "zkinterface-marlin"
version = "0.1.0"
authors = ["Elijah Grubb <elijah.grubb@sri.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
ark-std = { version="0.2.1-alpha.0" , git = "https://github.com/SRI-CSL/utils", default-features = false, branch="feb_freeze_orig"}
flatbuffers = "0.5.0"
serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0.53"
ark-snark = { git = "https://github.com/SRI-CSL/snark", default-features = false }
blake2 = { version = "0.9.1", default-features = false }
ark-marlin = { git = "https://github.com/SRI-CSL/marlin", default-features = false, branch="feb_freeze"} 
ark-poly-commit = { git = "https://github.com/SRI-CSL/poly-commit", default-features = false, version = "0.1.0" }
ark-ff = {git = "https://github.com/SRI-CSL/algebra", default-features=false, version = "0.1.0"}
ark-r1cs-std = {git = "https://github.com/SRI-CSL/r1cs-std", default-features=false,  version = "0.1.0"}
zkinterface = "1.3.4"
ark-relations = { git = "https://github.com/SRI-CSL/snark", default-features = false, version = "0.1.0" }
ark-test-curves = {git = "https://github.com/SRI-CSL/algebra", default-features=false, features = ["bls12_381_curve","mnt4_753_curve"]}
rand_core = { version = "0.5", default-features=false}
ark-poly = {git = "https://github.com/SRI-CSL/algebra",default-features = false, version = "0.1.0"}
ark-bls12-381 = { git = "https://github.com/SRI-CSL/curves", default-features = false, features = [ "curve" ], version = "0.1.0" }
ark-bls12-377 = { git = "https://github.com/SRI-CSL/curves", default-features = false, features = [ "curve" ], version = "0.1.0" }
vlpa19 = {version = "0.1.0", path = "../vlpa19", default_features = false}
ark-serialize = { git = "https://github.com/SRI-CSL/algebra", default-features = false, features = [ "derive" ], version = "0.1.0" }