[package]
name = "check_prime"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zki_sieve = {path = "../zkinterface-sieve/rust"}
sieve_fields = {path = "../sieve_fields"}
ark-ff = {git = "https://github.com/SRI-CSL/algebra", default-features=false, version = "0.1.0",features=["asm","parallel"] }
